# lua-cpp-lib

./: .clang-format  CMakeLists.txt  Makefile  example.lua
cmake/: cxx_standards.cmake
include/: lua.hpp  lua_exception.hpp  luacontext.hpp  luaexception.hpp  luaindex.hpp  lualao.hpp  luaref.hpp  luastate.hpp  luatic.hpp  luatype.hpp
include/lualao/: lua_exception.hpp  lualao.hpp  stack_context.hpp  stack_index.hpp  state.hpp  type.hpp
include/lualao/type_references/: boolean_reference.hpp  function_reference.hpp  number_reference.hpp  stack_reference_base.hpp  string_reference.hpp  table_reference.hpp
include/luatic/: luatic.hpp  stack_context.hpp  stack_index.hpp  state.hpp  type.hpp
include/luatic/type_references/: boolean_reference.hpp  function_reference.hpp  number_reference.hpp  stack_reference_base.hpp  string_reference.hpp  table_reference.hpp
include/type_references/: boolean_reference.hpp  stack_reference_base.hpp  string_reference.hpp
src/: main.cpp
